Fix weird wrapping of title and underline

--- a/src/components/overlay/index.css
+++ b/src/components/overlay/index.css
@@ -155,10 +155,12 @@
   & .Overlay-inner {
     background: url("../img/background-overlay-02a.jpg") no-repeat top center;
     background-size: cover;
+    position: relative;
+    z-index: 0;
 
     &.is-second {
-      background: url("../img/background-overlay-02b.jpg") no-repeat -20px 0;
-      background-size: 130%;
+      background: url("../img/background-overlay-02b.jpg") no-repeat 0 0;
+      background-size: cover;
     }
   }
 }
@@ -350,13 +352,14 @@
   }
 
   .Overlay--02 {
-    & .Overlay-inner {
-      background-size: 110%;
-    }
-
     & .Overlay-title {
       max-width: 540px;
       min-width: 500px;
+    }
+
+    @nest .is-en .Overlay-title {
+      max-width: 240px;
+      min-width: 100px;
     }
   }
 
